; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_regexp.c_die.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_regexp.c_die.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cstate = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cstate*, i8*)* @die to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @die(%struct.cstate* %0, i8* %1) #0 {
  %3 = alloca %struct.cstate*, align 8
  %4 = alloca i8*, align 8
  store %struct.cstate* %0, %struct.cstate** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = load %struct.cstate*, %struct.cstate** %3, align 8
  %7 = getelementptr inbounds %struct.cstate, %struct.cstate* %6, i32 0, i32 0
  store i8* %5, i8** %7, align 8
  %8 = load %struct.cstate*, %struct.cstate** %3, align 8
  %9 = getelementptr inbounds %struct.cstate, %struct.cstate* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @longjmp(i32 %10, i32 1)
  ret void
}

declare dso_local i32 @longjmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
